fixes close button alignment on tutorial window

--- a/src/main/webapp/js/widgets/Widget.css
+++ b/src/main/webapp/js/widgets/Widget.css
@@ -81,6 +81,7 @@
     right: 0;
     font-size: 15px;
     opacity: 1 !important;
+    margin-top: -10px;
 }
 
 .ui-dialog .ui-dialog-titlebar-close:hover {
